--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 button, a,
-input {
+input, select {
     cursor: pointer;
 }
 
@@ -26,6 +26,7 @@ a {
 .ct-navigation {
     display: flex;
     padding: 1.5rem 0;
+    overflow-x: hidden;
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #ccc;
@@ -33,13 +34,18 @@ a {
 
 .ct-header {
     width: 100%;
-    height: 56px;
     display: flex;
+    min-height: 56px;
     padding: 0 1.5rem;
     max-width: 1200px;
     align-items: center;
     justify-content: space-between;
 }
+
+.header-close-btn {
+    order: 2;
+}
+
 
 /* BOTÃO MENU */
 .close-btn {
@@ -64,6 +70,7 @@ a {
     width: 100%;
     position: relative;
     padding: 0 24px;
+    order: 1;
 }
 
 .progress {
@@ -143,7 +150,6 @@ a {
 
 section{
     display: flex;
-    /* height: 100vh; */
     position: relative;
     align-items: center;
     justify-content: center;
@@ -374,7 +380,7 @@ section{
 }
 
 .termos {
-    width: 55%;
+    width: 100%;
     padding: 0;
     border-top: none;
     text-align: center;
@@ -406,6 +412,15 @@ p {
     .back-button-text {
         display: none;
     }
+    .header-close-btn {
+        order: 1;
+    }
+    .stepper {
+        order: 2;
+    }
+    .ct-header {
+        flex-wrap: wrap;
+    }
 }
 
 @media (max-width:575px) {
@@ -417,10 +432,12 @@ p {
         display: block;
     }
 
-
-
     .termos {
        width: 100%;
+    }
+
+    .step {
+        display: none;
     }
 }
 
@@ -506,8 +523,8 @@ p {
     color: #5d7079;
 }
 
-.slide, .sp {
-    display: none;
+.slide {
+    display: flex;
 }
 
 .slide.active {
