--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ a {
     display: flex;
     padding: 1.5rem 0;
     overflow-x: hidden;
+    position: relative;
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #ccc;
@@ -149,30 +150,33 @@ a {
     border-radius: 8px;
 } */
 
-section{
+/* section{
     display: flex;
     position: relative;
     align-items: center;
     justify-content: center;
-}
+} */
 
 .teste{
     width: 100%;
     margin: 0 auto;
     padding: 0 32px;
     max-width: 1100px;
+    /* background:red; */
 }
 
 .teste2 {
     width: 100%;
     max-width: 1100px;
     position: relative;
+    /* background-color: #00ff22; */
 }
 
 .ct-form {
     width: 100%;
     max-width: 565px;
     margin-left: 25%;
+    /* background: fuchsia; */
 }
 
 /* .teste2:has(div) {
@@ -429,8 +433,6 @@ p {
     .ct-form {
         margin-left: 16%;
     }
-    
-
 }
 
 @media (max-width:575px) {
@@ -527,12 +529,6 @@ p {
     display: flex;
 }
 
-.center{
-    display: flex; 
-    padding: 2rem 1.5rem; 
-    justify-content: center;
-}
-
 .button-input {
     text-align: start;
     border-radius: 10px; 
@@ -552,3 +548,6 @@ p {
     display:flex;
 }
 
+.header-btn {
+    width: 40px;
+}
